# ML-CO-pipeline-AMoD-control

./: .gitattributes  .gitignore  README.md  create_full_information_solution.py  create_training_instances.py  evaluation.py  master_script.sh  requirements.txt  run_bash_benchmarks.cmd  run_bash_createInstances.cmd  run_bash_training.cmd  run_pipeline.py  sanity_check.py  sanity_check_performance.py  training.py
cplusplus/: CMakeLists.txt
cplusplus/cmake/: Conan.cmake
cplusplus/include/: kdisjoint.hpp  kedgedisjoint.hpp
cplusplus/module/: cplusplus_interface.cpp
data/: LookUP_Distance_250_250.npy  LookUP_Duration_250_250.npy  LookUP_map_graph_idxs_250_250.npy  LookUpGrid_250_250  RebalancingGrid_150_150  manhattan_graph.graphml  movement-speeds-hourly-new-york-2020-1_preprocessed.csv  read_in_best_learning_iteration.txt
data/US_County_shape/: nybb_Correct.dbf  nybb_Correct.shp  nybb_Correct.shx  tl_2020_us_county.dbf  tl_2020_us_county.shp  tl_2020_us_county.shp.ea.iso.xml  tl_2020_us_county.shp.iso.xml  tl_2020_us_county.shx
data/taxi_data_Manhattan_2015/month-01/: trip_data_2015_01_day-00.csv  trip_data_2015_01_day-01.csv  trip_data_2015_01_day-02.csv  trip_data_2015_01_day-03.csv  trip_data_2015_01_day-04.csv  trip_data_2015_01_day-05.csv  trip_data_2015_01_day-06.csv  trip_data_2015_01_day-07.csv  trip_data_2015_01_day-08.csv  trip_data_2015_01_day-09.csv  trip_data_2015_01_day-10.csv  trip_data_2015_01_day-11.csv  trip_data_2015_01_day-12.csv  trip_data_2015_01_day-13.csv  trip_data_2015_01_day-14.csv  trip_data_2015_01_day-15.csv  trip_data_2015_01_day-16.csv  trip_data_2015_01_day-17.csv  trip_data_2015_01_day-18.csv  trip_data_2015_01_day-19.csv  trip_data_2015_01_day-20.csv  trip_data_2015_01_day-21.csv  trip_data_2015_01_day-22.csv  trip_data_2015_01_day-23.csv  trip_data_2015_01_day-24.csv  trip_data_2015_01_day-25.csv  trip_data_2015_01_day-26.csv  trip_data_2015_01_day-27.csv  trip_data_2015_01_day-28.csv  trip_data_2015_01_day-29.csv  trip_data_2015_01_day-30.csv
data/taxi_data_Manhattan_2015/month-02/: trip_data_2015_02_day-00.csv  trip_data_2015_02_day-01.csv  trip_data_2015_02_day-02.csv  trip_data_2015_02_day-03.csv  trip_data_2015_02_day-04.csv  trip_data_2015_02_day-05.csv  trip_data_2015_02_day-06.csv  trip_data_2015_02_day-07.csv  trip_data_2015_02_day-08.csv  trip_data_2015_02_day-09.csv  trip_data_2015_02_day-10.csv  trip_data_2015_02_day-11.csv  (+16 more)
data/taxi_data_Manhattan_2015_preprocessed/: taxi_data_format.txt
learning_problem/: bfgs_optimizer.py  sgd_optimizer.py  util_learning.py
pipeline/: combinatorial_optimization.py  decoder.py  graph_generator.py  predictor.py
pipeline/predictors/: Greedy.py  Linear.py  NeuralNetwork.py
prep/: feature_data.py  preprocess_grid.py  preprocess_historical_ride_data.py  preprocess_nyc_data.py  preprocess_speed_duration_LookUp.py  preprocess_vehicleDistribution.py
src/: clock.py  config.py  cplusplus_interface.py  environment.py  sampler.py  util.py
visualization/: visualization_gif.py  visualization_heatmap.py  visualization_results.py
(+703 files in other folders)
